@@ -26,6 +26,7 @@ Verilator 4.215 devel
 * Fix display of signed without format (#3204). [Julie Schwartz]
 * Fix display of empty string constant (#3207). [Julie Schwartz]
 * Fix incorrect width after and-or optimization (#3208). [Julie Schwartz]
+* Fix $fopen etc on integer arrays (#3214). [adrienlemasle]
 * Fix %0 format on $value$plusargs.
 
 
